FINAL/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_25\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Users\Seydi\Desktop\game code\box opelkaarstapelen en kantelen\box opelkaarstapelen en kantelen
-d
C:\Users\Seydi\Desktop\game code\box opelkaarstapelen en kantelen\box opelkaarstapelen en kantelen\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Seydi\Desktop\game code\box opelkaarstapelen en kantelen\box opelkaarstapelen en kantelen\schip.java
<---- end of javadoc command ---->
Loading source file C:\Users\Seydi\Desktop\game code\box opelkaarstapelen en kantelen\box opelkaarstapelen en kantelen\schip.java...
C:\Users\Seydi\Desktop\game code\box opelkaarstapelen en kantelen\box opelkaarstapelen en kantelen\schip.java:73: error: ';' expected
                b.setLocation(1,1);
                 ^
C:\Users\Seydi\Desktop\game code\box opelkaarstapelen en kantelen\box opelkaarstapelen en kantelen\schip.java:79: error: class, interface, or enum expected
}
^
2 errors
